snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/error-0.1.1-20210823.154613-2.module.sha256
741da18f9b7d7c6826c6125553f268126fa3ffbe46c94614b531a801685411d2